@@ -7,6 +7,8 @@ import br.com.poupex.investimento.recursosfinanceiros.exception.RecursoNaoEncont
 import com.fasterxml.jackson.databind.JsonMappingException.Reference;
 import com.fasterxml.jackson.databind.exc.InvalidFormatException;
 import com.fasterxml.jackson.databind.exc.PropertyBindingException;
+import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Objects;
@@ -26,6 +28,8 @@ import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ControllerAdvice;
 import org.springframework.web.bind.annotation.ExceptionHandler;
+import org.springframework.web.context.request.RequestAttributes;
+import org.springframework.web.context.request.ServletWebRequest;
 import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 import org.springframework.web.servlet.NoHandlerFoundException;
@@ -37,58 +41,45 @@ import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExcep
 public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
 
   private final MessageSource messageSource;
-
-  private static final String MSG_ERRO_GENERICA_USUARIO_FINAL = "Ocorreu um erro interno inesperado no sistema." +
-    " Tente novamente e se o problema persistir, entre em contato com o administrador do sistema.";
+  private static final String ERRO_GENERICO_USUARIO = "Tente novamente. Se o problema persistir entre em contato com a área técnica.";
 
   @ExceptionHandler(Exception.class)
   public ResponseEntity<Object> handleUncaught(final Exception ex, final WebRequest request) {
     log.error("Ocorreu um erro não esperado", ex);
-    return handleExceptionInternal(
-      ex,
-      builder(HttpStatus.INTERNAL_SERVER_ERROR, "Erro não experado", MSG_ERRO_GENERICA_USUARIO_FINAL, MSG_ERRO_GENERICA_USUARIO_FINAL),
-      new HttpHeaders(),
-      HttpStatus.INTERNAL_SERVER_ERROR,
-      request
+    return handleExceptionInternal(ex,
+      builder(
+        HttpStatus.INTERNAL_SERVER_ERROR,
+        "Erro não experado.",
+        "Ocorreu um erro interno inesperado no sistema.",
+        "Tente novamente. Se problema persistir, entre em contato com o administrador do sistema."
+      ),
+      new HttpHeaders(), HttpStatus.INTERNAL_SERVER_ERROR, request
     );
   }
 
   @ExceptionHandler(RecursoNaoEncontradoException.class)
   public ResponseEntity<?> handleEntidadeNaoEncontrada(final RecursoNaoEncontradoException ex, final WebRequest request) {
     return handleExceptionInternal(
-      ex, builder(ex.getStatus(), "Recurso não encontrado", ex.getMessage(), ex.getMessage()), new HttpHeaders(), ex.getStatus(), request
+      ex, builder(ex.getStatus(), ex.getTitulo(), ex.getMessage(), ex.getMessage()), new HttpHeaders(), ex.getStatus(), request
     );
   }
 
   @ExceptionHandler(NegocioException.class)
   public ResponseEntity<?> handleNegocio(final NegocioException ex, final WebRequest request) {
     return handleExceptionInternal(
-      ex,
-      builder(ex.getStatus(), "Erro de negócio", ex.getMessage(), ex.getMessage()),
-      new HttpHeaders(),
-      ex.getStatus(),
-      request
+      ex, builder(ex.getStatus(), ex.getTitulo(), "Erro de negócio", ex.getMessage()), new HttpHeaders(), ex.getStatus(), request
     );
   }
 
   @Override
   protected ResponseEntity<Object> handleMethodArgumentNotValid(
-    final MethodArgumentNotValidException ex,
-    final HttpHeaders headers,
-    final HttpStatus status,
-    final WebRequest request
+    final MethodArgumentNotValidException ex, final HttpHeaders headers, final HttpStatus status, final WebRequest request
   ) {
-    val detail = "Um ou mais campos estão inválidos. Faça o preenchimento correto e tente novamente.";
-    val bindingResult = ex.getBindingResult();
-    val validacoes = bindingResult.getAllErrors().stream()
-      .map(objectError -> {
-        var name = objectError.getObjectName();
-        if (objectError instanceof FieldError) {
-          name = ((FieldError) objectError).getField();
-        }
-        return new ValidacaoModel(name, messageSource.getMessage(objectError, LocaleContextHolder.getLocale()));
-      }).collect(Collectors.toList());
-    return handleExceptionInternal(ex, builder(status, "Dados inválidos", detail, detail, validacoes), headers, status, request);
+    val validacoes = ex.getBindingResult().getAllErrors().stream().map(objectError -> {
+      val name = objectError instanceof FieldError ? ((FieldError) objectError).getField() : objectError.getObjectName();
+      return new ValidacaoModel(name, messageSource.getMessage(objectError, LocaleContextHolder.getLocale()));
+    }).toList();
+    return handleExceptionInternal(ex, builder(validacoes, ex.getTarget()), headers, status, request);
   }
 
   @Override
@@ -96,7 +87,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
     final NoHandlerFoundException ex, final HttpHeaders headers, final HttpStatus status, final WebRequest request
   ) {
     val detail = String.format("O recurso %s, que você tentou acessar, é inexistente.", ex.getRequestURL());
-    return handleExceptionInternal(ex, builder(status, "Recurso não encontrado", detail, MSG_ERRO_GENERICA_USUARIO_FINAL), headers, status, request);
+    return handleExceptionInternal(ex, builder(status, "Recurso não encontrado", detail, ERRO_GENERICO_USUARIO), headers, status, request);
   }
 
   @Override
@@ -121,7 +112,7 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
     }
     val detail = "O corpo da requisição está inválido. Verifique erro de sintaxe.";
     return handleExceptionInternal(
-      ex, builder(status, "A requisição está incorreta", detail, MSG_ERRO_GENERICA_USUARIO_FINAL), headers, status, request
+      ex, builder(status, "A requisição está incorreta", detail, ERRO_GENERICO_USUARIO), headers, status, request
     );
   }
 
@@ -130,18 +121,16 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
   ) {
     val detail = String.format(
       "O parâmetro de URL '%s' recebeu o valor '%s', que é de um tipo inválido. Corrija e informe um valor compatível com o tipo %s.",
-      ex.getName(),
-      ex.getValue(),
-      Objects.requireNonNull(ex.getRequiredType()).getSimpleName()
+      ex.getName(), ex.getValue(), Objects.requireNonNull(ex.getRequiredType()).getSimpleName()
     );
-    return handleExceptionInternal(ex, builder(status, "Parametro inválido", detail, MSG_ERRO_GENERICA_USUARIO_FINAL), headers, status, request);
+    return handleExceptionInternal(ex, builder(status, "Parametro inválido", detail, ERRO_GENERICO_USUARIO), headers, status, request);
   }
 
   private ResponseEntity<Object> handlePropertyBinding(
     final PropertyBindingException ex, final HttpHeaders headers, final HttpStatus status, final WebRequest request
   ) {
     val detail = String.format("A propriedade '%s' não existe. Corrija ou remova essa propriedade e tente novamente.", path(ex.getPath()));
-    return handleExceptionInternal(ex, builder(status, "Propriedade não existe", detail, MSG_ERRO_GENERICA_USUARIO_FINAL), headers, status, request);
+    return handleExceptionInternal(ex, builder(status, "Propriedade não existe", detail, ERRO_GENERICO_USUARIO), headers, status, request);
   }
 
   private ResponseEntity<Object> handleInvalidFormat(
@@ -150,23 +139,30 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
     final HttpStatus status,
     final WebRequest request
   ) {
-    val detail = String.format(
-      "A propriedade '%s' recebeu o valor '%s' é de um tipo inválido. Corrija e informe um valor compatível com o tipo %s.",
-      path(ex.getPath()),
-      ex.getValue(),
-      ex.getTargetType().getSimpleName()
+    val detail = String.format("A propriedade '%s' recebeu o valor '%s' é de um tipo inválido. Corrija e informe um valor compatível com o tipo %s.",
+      path(ex.getPath()), ex.getValue(), ex.getTargetType().getSimpleName()
     );
-    return handleExceptionInternal(ex, builder(status, "Formato inválido", detail, MSG_ERRO_GENERICA_USUARIO_FINAL), headers, status, request);
+    return handleExceptionInternal(ex, builder(status, "Formato inválido", detail, ERRO_GENERICO_USUARIO), headers, status, request);
+  }
+
+  private String path(final List<Reference> references) {
+    return references.stream().map(Reference::getFieldName).collect(Collectors.joining("."));
   }
 
   private ResponseModel builder(final HttpStatus status, final String title, final String detail, final String userMessage) {
     return new ResponseModel(LocalDateTime.now(), status.value(), title, detail, userMessage, null, null);
   }
 
-  private ResponseModel builder(
-    final HttpStatus status, final String title, final String detail, final String userMessage, final List<ValidacaoModel> validacoes
-  ) {
-    return new ResponseModel(LocalDateTime.now(), status.value(), title, detail, userMessage, validacoes, null);
+  private ResponseModel builder(final List<ValidacaoModel> validacoes, final Object conteudo) {
+    return new ResponseModel(
+      LocalDateTime.now(),
+      HttpStatus.BAD_REQUEST.value(),
+      "Dados inválidos",
+      "Campos inválidos.",
+      "Um ou mais campos estão inválidos. Faça o preenchimento correto e tente novamente.",
+      validacoes,
+      conteudo
+    );
   }
 
   private ResponseModel builder(
@@ -178,10 +174,6 @@ public class ApiExceptionHandler extends ResponseEntityExceptionHandler {
     final Object conteudo
   ) {
     return new ResponseModel(LocalDateTime.now(), status.value(), title, detail, userMessage, validacoes, conteudo);
-  }
-
-  private String path(final List<Reference> references) {
-    return references.stream().map(Reference::getFieldName).collect(Collectors.joining("."));
   }
 
 }
